<resources>
    <string name="app_name">东大安保</string>
    <string name="empty"></string>
    <string name="toast_twice_click_exit">再次点击退出应用</string>
    <string name="dialog_please_wait">请稍后</string>
    <string name="project_name">东大安保</string>
    <string name="text_account">账号</string>
    <string name="input_text_account">输入账号</string>
    <string name="password">密码</string>
    <string name="input_password">输入密码</string>
    <string name="confirm_login">确认登录</string>
    <string name="footer_tips">维护校园安全，从我做起</string>
    <string name="search">搜索</string>
    <string name="login">登       录</string>
    <string name="search_tip">Search</string>
    <string name="scan_two_bar_tip">点击扫描二维码</string>
    <string name="search_result">查询结果</string>
    <string name="number_of_car">车牌号码</string>
    <string name="name_of_owner">车主姓名</string>
    <string name="phone_of_owner">车主电话</string>
    <string name="sector">所在部门</string>
    <string name="copyright">Powered by:不洗碗工作室 Version：1.0</string>

    <string name="logout">退出登录</string>
</resources>
