<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/logoin_bg_imag2x"
    android:orientation="vertical">


    <ImageView
        android:layout_width="197dp"
        android:layout_height="53.67dp"
        android:layout_gravity="center"
        android:layout_marginTop="99.33dp"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="296dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="79dp"
        android:background="@drawable/shape_round_box">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/login_icon" />

        <EditText
            android:background="@null"
            android:id="@+id/edt_account"
            android:layout_width="match_parent"
            android:layout_height="22.33dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="13dp"
            android:hint="@string/input_text_account"
            android:textColor="#FF9B9B9B"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="296dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:background="@drawable/shape_round_box">

        <ImageView
            android:layout_width="23.33dp"
            android:layout_height="23.33dp"
            android:layout_marginLeft="16.67dp"
            android:layout_marginStart="16.67dp"
            android:layout_marginTop="12.33dp"
            android:src="@drawable/locked" />

        <EditText
            android:inputType="textPassword"
            android:background="@null"
            android:id="@+id/edt_pwd"
            android:layout_width="match_parent"
            android:layout_height="22.33dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="13dp"
            android:hint="@string/input_password"
            android:textColor="#FF9B9B9B"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="102.67dp"
        android:alpha="0.7693"
        android:background="@drawable/shape_round_login"
        android:text="@string/login"
        android:textSize="16sp"
        android:textColor="@color/white">

    </Button>

    <include layout="@layout/footer_main" />
</LinearLayout>
